# style-rust-aku

./: Cargo.toml  README.md
src/: lib.rs  literal_suffix.rs  minimal_imports.rs  prefer_vec_macro.rs  tracing_macro_imports.rs  turbofish_collect.rs
ui/: literal_suffix.rs  literal_suffix.stderr  main.stderr  minimal_imports.rs  minimal_imports.stderr  prefer_vec_macro.rs  prefer_vec_macro.stderr  tracing_macro_imports.rs  tracing_macro_imports.stderr  turbofish_collect.rs  turbofish_collect.stderr
